crates/shipper-types/src/snapshots/shipper_types__schema__tests__snapshot_parse_err_non_numeric.snap
---
source: crates/shipper-types/src/schema.rs
assertion_line: 190
expression: "parse_schema_version(\"shipper.receipt.vx\").map_err(|e| e.to_string())"
---
Err(
    "invalid version number in schema version: shipper.receipt.vx",
)
