crates/shipper-types/src/snapshots/shipper_types__schema__tests__snapshot_parse_multiple_document_types.snap
---
source: crates/shipper-types/src/schema.rs
expression: results
---
[
    (
        "receipt",
        Some(
            1,
        ),
    ),
    (
        "state",
        Some(
            1,
        ),
    ),
    (
        "events",
        Some(
            1,
        ),
    ),
    (
        "lock",
        Some(
            1,
        ),
    ),
]
