crates/shipper-types/src/snapshots/shipper_types__schema__tests__snapshot_parse_ok_result.snap
---
source: crates/shipper-types/src/schema.rs
assertion_line: 180
expression: "parse_schema_version(\"shipper.receipt.v42\")"
---
Ok(
    42,
)
