crates/shipper-types/src/snapshots/shipper_types__schema__tests__snapshot_validate_ok.snap
---
source: crates/shipper-types/src/schema.rs
assertion_line: 195
expression: "validate_schema_version(\"shipper.state.v3\", \"shipper.state.v1\", \"state\")"
---
Ok(
    (),
)
